--- a/public/index.html
+++ b/public/index.html
@@ -296,7 +296,7 @@
         <div class="flex flex-col rounded shadow overflow-hidden">
           <div class="flex-shrink-0">
             <img  class="h-8" src="page/Screenshot 2022-08-10 at 17-52-39 Shopping Cart JS.png" alt="">
-            <p class=" text-white  text-center  ">PORTFOLIO VR2</p>
+            <p class=" text-white  text-center  ">PORTFOLIO V2</p>
             <p class="border-2 animate-bounce border-wind text-white
              hover:bg-darkwind text-center bottom-0 ">Visit live site</p>
            
