--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
               href="#contacts"
               class="lg:inline-flex lg:w-auto w-full px-3 py-2 rounded text-gray-400 items-center justify-center hover:bg-gray-900 hover:text-white"
             >
-              <span>Contact me</span>
+              <span>Contact</span>
             </a>
           </div>
         </div>
@@ -173,30 +173,33 @@
           <div class="border-wind p-5 hov reveal border-2">
            <p class="font-bold">2021-2022 </p> 
            <p class="pt-3 text-3xl font-bold">Web Development</p>
-           <p class="pt-3 text-darkwhite">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-             Praesent rhoncus lectus nisi.</p>
+           <p class="pt-3 text-darkwhite">I create websites and also the site's technical aspects, 
+            such as its performance and capacity. 
+           </p>
            <p class="pt-4"><img class="" src="page/tools-svgrepo-com (2).svg"  ></p>
 
           </div>
           <div class="border-wind hov reveal p-5 border-2">
             <p class="font-bold">2021-2022</p> 
            <p class="pt-3 text-3xl font-bold">Web Maintenance</p>
-           <p class="pt-3 text-darkwhite">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-             Praesent rhoncus lectus nisi.</p>
+           <p class="pt-3 text-darkwhite"> I maintain website's overall health and performance. 
+            Keeping a website up-to-date at full capacity. 
+            </p>
            <p class="pt-4"><img class="" src="page/tools-2-svgrepo-com.svg"  ></p>
           </div>
           <div class="border-wind hov p-5 reveal border-2">
             <p class="font-bold " >2021-2022 </p> 
            <p class="pt-3 text-3xl font-bold">Problem - solving</p>
-           <p class="pt-3 text-darkwhite">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-             Praesent rhoncus lectus nisi.</p>
+           <p class="pt-3 text-darkwhite">I find solutions to a problem,
+              and applying best practices to achieve a desired result.</p>
            <p class="pt-4"><img class="" src="page/blog-svgrepo-com.svg"  ></p>
           </div>
           <div class="border-wind p-5 hov reveal border-2">
             <p class="font-bold" >2021-2022</p> 
            <p class="pt-3 text-3xl font-bold">Responsive Design</p>
-           <p class="pt-3 text-darkwhite">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-             Praesent rhoncus lectus nisi.</p>
+           <p class="pt-3 text-darkwhite">Using the best frame works to make the best mobile responsive website.
+            .
+           </p>
            <p class="pt-4">
            
             <img class="" src="page/mobile-svgrepo-com.svg"  >
@@ -310,7 +313,7 @@
             <img class="h-8" src="page/Screenshot 2022-08-14 at 14-00-56 Ellams portfolio.png" alt="">
             <p class=" text-white  text-center  ">FOLIO V1</p>
             <p class="border-2 animate-bounce border-wind text-white
-             hover:bg-darkwind text-center bottom-0 ">Visit live site</p>
+             hover:bg-darkwind text-center bottom-0 "><a href="https://ellamsgfolio.netlify.app">Visit live site</a></p>
           </div>
         </div>
       </div>
@@ -353,7 +356,7 @@
 </div>
 
 <div class=" ">
-<img class="md:h-20 h-20 object-none  md:object-fill  bg-center" src="page/fm6gqslxsaie6fg.jfif">
+<img class="md:h-20 h-20 object-none rounded-md reveal  md:object-fill  bg-center" src="page/fm6gqslxsaie6fg.jfif">
 
 </div>
   
@@ -383,10 +386,10 @@
       doesnt happen at once."
       </i>
       <div class="text-white md:gap-6 md:pr pt-6 grid grid-cols-4 justify-center">
-        <span class="btn2   "><a href="https://twitter.com/ellamsgeorge" ></a><i class="fa-brands w-5 h-6 fa-twitter"></i></span>
-        <span class=" btn2 "><a href="https://github.com/Ellamsg"></a><i class="fa-brands w-5 h-6 fa-github"></i></a></span>
-        <span class="btn2"><a href=""><i class="fa-brands  w-5 h-6 fa-linkedin"></a></i></span>
-        <span class="btn2  "><a href="mailto:ellamsgeorge7@gmail.com? subject=subject text"></a><i class="fa-brands w-5 h-6 fa-facebook "></i></span>
+        <span class="btn2   "><a href="https://twitter.com/ellamsgeorge" ><i class="fa-brands w-5 h-6 fa-twitter"></i></a></span>
+        <span class=" btn2 "><a href="https://github.com/Ellamsg"><i class="fa-brands w-5 h-6 fa-github"></i></a></span>
+        <span class="btn2"><a href=""><i class="fa-brands  w-5 h-6 fa-linkedin"></i></a></span>
+        <span class="btn2  "><a href="mailto:ellamsgeorge7@gmail.com? subject=subject text"><i class="fa-solid w-5 h-6 fa-envelope-circle-check "></i></a></span>
       </div>
 
     </div>
