--- a/public/index.html
+++ b/public/index.html
@@ -197,8 +197,9 @@
           <div class="border-wind p-5 hov reveal border-2">
             <p class="font-bold" >2021-2022</p> 
            <p class="pt-3 text-3xl font-bold">Responsive Design</p>
-           <p class="pt-3 text-darkwhite">Using the best frame works to make the best mobile responsive website.
-            .
+           <p class="pt-3 text-darkwhite">Using the best frame works to make 
+            the best responsive website that spans across all device.
+            
            </p>
            <p class="pt-4">
            
