--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,7 @@
     <p class="pt-2 font-bold leading-tight  lg:text-5xl text-4xl ">I'm a front end developer.</p>
     <p class="pt-2 reveal text-darkwhite">My name is Ellams George i am a creative front end developer/web developer.
       I am passionate about leveraging my diverse backgrounds to decipher challenging problems and create delightful experiences. 
-      I develop websites with HTML, CSS JavaScript and tailwind.
+      I develope websites with HTML, CSS JavaScript and tailwind.
     </p>
       
        <div class="pt-6  ">
@@ -143,7 +143,7 @@
     </div>
 
 
-    <div style="background-image:url('page/Oasis-Standards-Header-Image.webp') ;
+    <div class="heroImg"  style="background-image:url('page/Oasis-Standards-Header-Image.webp') ;
     " class="w-full lg:w-full pl-3 lg:h-20 h-16 object-none  bg-center ">
         <div class="border-b-2 ml-3 reveal lg:mt-20  mr-3 mt-18 p-4 border-l-2 border-b-white" >
           <p class="text-7xl font-extrabold ">1+</p>
@@ -287,7 +287,7 @@
       <div  class="swiper-slide bg-contain ">
         <div class="flex flex-col  rounded shadow overflow-hidden">
           <div class="flex-shrink-0  relative text-white ">
-            <img  class="h-8" src="page/Screenshot 2022-08-14 at 14-03-21 Document.png">
+            <img  class="h-8 " src="page/Screenshot 2022-08-14 at 14-03-21 Document.png">
             <p class=" text-white  text-center   ">JS TIME API</p>
             <p class="border-2 animate-bounce border-wind text-white hover:bg-darkwind text-center"><a href="https://time-js.netlify.app">Visit live site</a></p>
            
