--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Cinzel&display=swap" rel="stylesheet"> 
 <link href='https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css' rel='stylesheet' type='text/css'>
  
-  
+ <!--just checking--> 
 <title>Ellams portfolio</title>
 
 </head>
@@ -26,7 +26,7 @@
 
 <!--NAV BAR-->
 
-    <nav id="home" class="flex items-center  text-white  bg-darkwind p-3 flex-wrap">
+    <nav id="home" class="flex items-center text-white  bg-darkwind p-3 flex-wrap">
         <a href="#" class="p-2 mr-4 inline-flex items-center">
          
           <span class="text-3xl lg:text-xl yup text-white font-bold uppercase tracking-wide"
@@ -342,7 +342,7 @@
 
   <div class="md:order-last ">
   <div id="work" class="">
-    <h1 class="text-1xl font-bold animate-pulse">BEST FREELANCERS</h1>
+    <h1 class="text-1xl font-bold animate-pulse ">BEST FREELANCERS</h1>
     <p class="pt-2 text-4xl font-semibold lg:text-5xl leading-tight">Ellams George</p>
    </div>
 
