--- a/public/index.html
+++ b/public/index.html
@@ -279,7 +279,7 @@
       <div class="swiper-slide  ">
         <div class="flex flex-col rounded shadow overflow-hidden">
           <div class="flex-shrink-0">
-            <img  class="h-8" src="page/Screenshot 2022-08-29 at 10-06-42 Document.png" alt="">
+            <img  class="h-8" src="page/dance-el.png" alt="">
             <p class=" text-white  text-center  ">DANCE STUDIO</p>
             <p class="border-2 animate-bounce border-wind text-white
              hover:bg-darkwind text-center bottom-0 "><a href="https://dance-el.netlify.app">live site</a> </p>
@@ -299,6 +299,19 @@
         </div>
       </div>
               
+      <div class="swiper-slide  ">
+        <div class="flex flex-col rounded shadow overflow-hidden">
+          <div class="flex-shrink-0">
+            <img alt="nifemi-folio" class="h-8" src="page/nife-graph.png" alt="">
+            <p class=" text-white  text-center  ">NIFE PHTOGRAPHY</p>
+            <p class="border-2 animate-bounce border-wind text-white
+             hover:bg-darkwind text-center bottom-0 "><a href="https://nife-graphy1.netlify.app">live site</a> </p>
+           
+          </div>
+        </div>
+      </div>
+
+
       <div  class="swiper-slide bg-contain ">
         <div class="flex flex-col  rounded shadow overflow-hidden">
           <div class="flex-shrink-0  relative text-white ">
@@ -368,7 +381,7 @@
    Got a question, proposal or projects or want to work together on something?
    feel free to reach out.
    <div class="leading-8 pt-4">
-   <a class="animate-pulse" href="tel:+2348093176797"> CONTACT ME</a>
+   <a class="animate-pulse" href="tel:+2348093176796"> CONTACT ME</a>
    
   </div>
   </div>
@@ -407,7 +420,7 @@
       <div class="text-white md:gap-6 md:pr pt-6 grid grid-cols-4 justify-center">
         <span class="btn2   "><a href="https://twitter.com/ellamsgeorge" ><i class="fa-brands w-5 h-6 fa-twitter"></i></a></span>
         <span class=" btn2 "><a href="https://github.com/Ellamsg"><i class="fa-brands w-5 h-6 fa-github"></i></a></span>
-        <span class="btn2"><a href=""><i class="fa-brands  w-5 h-6 fa-linkedin"></i></a></span>
+        <span class="btn2"><a href="https://www.linkedin.com/in/ellams-george-18b231246/"><i class="fa-brands  w-5 h-6 fa-linkedin"></i></a></span>
         <span class="btn2  "><a href="mailto:ellamsgeorge7@gmail.com? subject=subject text"><i class="fa-solid w-5 h-6 fa-envelope-circle-check "></i></a></span>
       </div>
 
