--- a/public/index.html
+++ b/public/index.html
@@ -102,12 +102,12 @@ body{
       <p class="pt-2 reveal text-darkwhite">My name is Ellams George i am a creative front end developer/web developer.
         I am passionate about leveraging my diverse backgrounds to decipher challenging problems and create delightful
         experiences.
-        I develope websites with HTML, CSS JavaScript and tailwind.
+        I develope websites with HTML, CSS JavaScript,React and tailwind.
       </p>
 
-      <div class="pt-6  ">
-        <details class="transition-a  styled border-b-wind border-b-2 mb-3">
-          Creating the highest efficiency, to handle presentational changes through
+      <div class="pt-6 ">
+        <details class="transition-a styled border-b-wind border-b-2 mb-3">
+          Creating the highest efficiency,to handle presentational changes through
           CSS updates and behavior through JavaScript/react updates. Writing HTML,
           design-agnostic as it should be, as a front end developer i want to solve peoples
           problems and real world problem making life easier for the everyday man through codes.
