--- a/public/index.html
+++ b/public/index.html
@@ -206,9 +206,11 @@ body{
     <div>
       <p class="border-b-wind border-b-2 mb-4 h-5 reveal">Tailwind</p>
       <p class="border-b-wind border-b-2 h-5 mb-4 ">Css</p>
+      <p class="border-b-wind border-b-2 h-5 mb-4 ">Gatsby</p>
     </div>
     <div>
       <p class="border-b-wind border-b-2 h-5 mb-4 ">Html</p>
+      <p class="border-b-wind border-b-2 h-5 mb-4 ">Figma</p>
       <p class="border-b-wind border-b-2  h-5 reveal">Javascript /React</p>
     </div>
   </div>
