--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <meta name="google-site-verification" content="0b8cZwUonuHrANTiKBCslDhhRuzAzlDiaoq6uvxVXHI" />
   <link rel="stylesheet" href="./css/tailwind.css">
-  <link src="https://kit.fontawesome.com/3b9e2cc044.js" crossorigin="anonymous"></link>
+  <script src="https://kit.fontawesome.com/3b9e2cc044.js" crossorigin="anonymous"></script>
   <link href='https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css' rel='stylesheet' type='text/css'>
 
   <!--just checking-->
