--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@ body{
       <p class="pt-2 reveal text-darkwhite">My name is Ellams George i am a creative front end developer/web developer.
         I am passionate about leveraging my diverse backgrounds to decipher challenging problems and create delightful
         experiences.
-        I develope websites with HTML, CSS JavaScript,React and tailwind.
+        I develop websites with HTML, CSS JavaScript,React and tailwind.
       </p>
 
       <div class="pt-6 ">
@@ -226,7 +226,7 @@ body{
     <div class="pt-3 pl-4 border-l-wind border-l-2 text-darkwhite mt-2">
       <p>
         Over the span of few months i've worked <br>
-        on some projects,from using javascript to building web with tailwind and css.
+        on some projects, using javascript and React js to build webapps with tailwind and css.
       </p>
     </div>
   </div>
