--- a/public/index.html
+++ b/public/index.html
@@ -220,7 +220,7 @@ body{
 
     <div id="work" class="">
       <h1 class="text-1xl font-bold animate-pulse">MY WORK</h1>
-      <p class="pt-2 text-4xl font-semibold lg:text-5xl leading-tight">The project i've <br>worked on.</p>
+      <p class="pt-2 text-4xl font-semibold lg:text-5xl leading-tight"> Projects i've <br>worked on.</p>
     </div>
 
     <div class="pt-3 pl-4 border-l-wind border-l-2 text-darkwhite mt-2">
