--- a/public/index.html
+++ b/public/index.html
@@ -285,6 +285,19 @@ body{
             </div>
           </div>
 
+
+          <div class="swiper-slide  ">
+            <div class="flex flex-col rounded shadow overflow-hidden">
+              <div class="flex-shrink-0">
+                <img class="h-8 object-contain " src="page/nowplaying.png" alt="">
+                <p class=" text-white  text-center  ">SPOTIFY NOW PLAYING</p>
+                <p class="border-2 animate-bounce border-wind text-white
+             hover:bg-darkwind text-center bottom-0 "><a href="https://ellams-now-playing.netlify.app/">live site</a> </p>
+
+              </div>
+            </div>
+          </div>
+
           <div class="swiper-slide  ">
             <div class="flex flex-col rounded shadow overflow-hidden">
               <div class="flex-shrink-0">
